finished static pages

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,4 @@
-<title>Help | Ruby on Rails Tutorial Sample App</title>
+<% provide(:title, "Help") %>
+
 <h1>StaticPages#help</h1>
 <p>Find me in app/views/static_pages/help.html.erb</p>
