--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<title>Home | Ruby on Rails Tutorial Sample App</title>
+<% provide(:title, "Home") %>
 <h1>StaticPages#home</h1>
 <div>
 	<h2>Welcome to my RoR static pages!</h2>
