--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,6 +9,7 @@
 <script type="text/javascript">
 	let count = 0;
 	let destroyTheWorld = function(){
+		console.log("you chose to destroy the world, nice one.")
 		count++;
 		if(count > 3){
 			alert("destruction of the world commencing");
