--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -1,3 +1,4 @@
 <% provide(:title, "Contact Us") %>
 <h1>Contact us!</h1>
-<p>If you would like to contact us, <b>yell</b> as loud as you can and a consultant will be right with you.</p>
+<p>If you would like to contact us,
+  <b>yell</b> as loud as you can and a consultant will be right with you.</p>
