--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Home") %>
-<h1>StaticPages#home</h1>
+<h1>Home Page</h1>
 <div class="center jumbotron">
   <h1>Welcome to the Sample App</h1>
   <h2> DON'T FALL FOR IT </h2>
