--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, 'Users') %>
 <h1>All Users</h1>
+<%= will_paginate %>
 <ul class="users">
   <% @users.each do |user| %>
       <li>
@@ -8,3 +9,5 @@
       </li>
   <% end %>
 </ul>
+
+<%= will_paginate %>
