--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,12 +2,7 @@
 <h1>All Users</h1>
 <%= will_paginate %>
 <ul class="users">
-  <% @users.each do |user| %>
-      <li>
-        <%= link_to user.name, user %>
-        <%= gravatar_for(user, size: 50) %>
-      </li>
-  <% end %>
+  <%= render @users %>
 </ul>
 
 <%= will_paginate %>
