--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,8 @@
 <li>
   <%= link_to user.name, user %>
   <%= gravatar_for(user, size: 50) %>
+  <% if current_user.admin? && !current_user?(user) %>
+      | <%= link_to 'delete', user, method: :delete,
+                    data: { confirm: 'You sure?' } %>
+  <% end %>
 </li>
