--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,5 +1,6 @@
-<h1>User#account_activation</h1>
+<h1>Account Activation</h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/user_mailer/account_activation.html.erb
+  Hello <%= @user.name %>, please follow this link to activate your account:
+  <%= link_to "Activate", edit_account_activation_url(@user.activation_token, email: @user.email) %>
 </p>
