ch13 - display all microposts on the user profile page
- add _micropost partial
- add @microposts instance variable to show action of user controller
- adjust user profile page to show microposts
- generate microposts controller

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,15 @@
       </h1>
     </section>
   </aside>
+  <div class="col-8">
+    <% if @user.microposts.any? %>
+        <h4>Microposts (<%= @user.microposts.count %>)</h4>
+        <ol class="microposts">
+          <%= render @microposts %>
+        </ol>
+        <%= will_paginate @microposts %>
+    <% end %>
+  </div>
 </div>
 
 <p> account oppened on <i><%= @user.created_at %></i>
